--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.cl-avatarBox {
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.bg-gradient {
+  background-color: hsla(102, 72%, 51%, 1);
+  background-image: radial-gradient(
+      at 79% 0%,
+      hsla(194, 0%, 100%, 1) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 35% 0%, hsla(0, 0%, 100%, 1) 0px, transparent 50%),
+    radial-gradient(at 52% 0%, hsla(27, 0%, 100%, 1) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, hsla(247, 0%, 100%, 1) 0px, transparent 50%),
+    radial-gradient(at 100% 0%, hsla(194, 0%, 100%, 1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, hsla(89, 100%, 43%, 1) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, hsla(130, 100%, 50%, 1) 0px, transparent 50%);
 }
